Add json validation

--- a/config.json
+++ b/config.json
@@ -2,9 +2,10 @@
   "general": {
   },
   "api": {
-    "baseUrl" : "https://petstore.swagger.io",
-    "version" : "v2"
+    "baseUrl": "https://petstore.swagger.io",
+    "version": "v2"
   },
   "ui": {
+    "browser": "Chrome"
   }
 }
