Add test endpoint Post

--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "version": "v2"
   },
   "ui": {
-    "browser": "Chrome"
+    "browser": "Chrome",
+    "baseUrl": "https://petstore.swagger.io"
   }
 }
